@@ -169,4 +169,83 @@ public class ModelHandle2Test extends NbTestCase {
         }
     }
 
+    public void testJettyDebugSingle() throws Exception { // #
+        TestFileUtils.writeFile(d, "pom.xml", "<project><modelVersion>4.0.0</modelVersion><groupId>g</groupId><artifactId>a</artifactId><version>0</version><profiles><profile><id>jetty</id></profile></profiles></project>");
+        TestFileUtils.writeFile(d, "nbactions.xml", 
+            "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+"<actions>\n" +
+"        <action>\n" +
+"            <actionName>run.single.main</actionName>\n" +
+"            <packagings>\n" +
+"                <packaging>*</packaging>\n" +
+"            </packagings>\n" +
+"            <goals>\n" +
+"                <goal>process-classes</goal>\n" +
+"                <goal>org.codehaus.mojo:exec-maven-plugin:1.2.1:exec</goal>\n" +
+"            </goals>\n" +
+"            <properties>\n" +
+"                <exec.args>-XX:MaxPermSize=512m -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.executable>java</exec.executable>\n" +
+"                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
+"            </properties>\n" +
+"        </action>\n" +
+"        <action>\n" +
+"            <actionName>debug.single.main</actionName>\n" +
+"            <packagings>\n" +
+"                <packaging>*</packaging>\n" +
+"            </packagings>\n" +
+"            <goals>\n" +
+"                <goal>process-classes</goal>\n" +
+"                <goal>org.codehaus.mojo:exec-maven-plugin:1.2.1:exec</goal>\n" +
+"            </goals>\n" +
+"            <properties>\n" +
+"                <exec.args>-XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.executable>java</exec.executable>\n" +
+"                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
+"                <jpda.listen>true</jpda.listen>\n" +
+"            </properties>\n" +
+"        </action>\n" +
+"</actions>\n" +
+""
+        );
+        FileObject nbactionsJetty = TestFileUtils.writeFile(d, "nbactions-jetty.xml", 
+"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+"<actions>\n" +
+"        <action>\n" +
+"            <actionName>debug.single.main</actionName>\n" +
+"            <packagings>\n" +
+"                <packaging>*</packaging>\n" +
+"            </packagings>\n" +
+"            <goals>\n" +
+"                <goal>process-classes</goal>\n" +
+"                <goal>org.codehaus.mojo:exec-maven-plugin:1.2.1:exec</goal>\n" +
+"            </goals>\n" +
+"            <properties>\n" +
+"                <exec.args>-XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.executable>java</exec.executable>\n" +
+"                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
+"                <jpda.listen>true</jpda.listen>\n" +
+"            </properties>\n" +
+"        </action>\n" +
+"    </actions>\n" +
+""
+        );
+        Project project = ProjectManager.getDefault().findProject(d);
+        M2ConfigProvider cp = project.getLookup().lookup(M2ConfigProvider.class);
+        for (M2Configuration c : cp.getConfigurations()) {
+            if (c.getId().equals("jetty")) {
+                cp.setActiveConfiguration(c);
+            }
+        }
+        assertEquals("jetty", cp.getActiveConfiguration().getId());
+        {
+            RunConfig run = ActionToGoalUtils.createRunConfig("debug.single.main", (NbMavenProjectImpl) project, project.getLookup());
+            assertEquals("Two goals: " + run.getGoals(), 2, run.getGoals().size());
+            assertEquals("process-classes", run.getGoals().get(0));
+            assertEquals("org.codehaus.mojo:exec-maven-plugin:1.2.1:exec", run.getGoals().get(1));
+            assertEquals("One profile activated in action: " + run.getActivatedProfiles(), 1, run.getActivatedProfiles().size());
+            assertEquals("jetty", run.getActivatedProfiles().get(0));
+        }
+    }
+    
 }
